Fix menu button sometimes wrapping on tap bar

--- a/resources/assets/sass/_menu.scss
+++ b/resources/assets/sass/_menu.scss
@@ -264,6 +264,9 @@
   padding: 10px;
   z-index: 10000;
 }
+.tap-bar .nav {
+  flex-wrap: nowrap;
+}
 .nav-pills .nav-link {
   color: rgba(0, 0, 0, 0.8);
 }
